--- a/Shaska/packages.config
+++ b/Shaska/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="AutoMapper" version="4.1.1" targetFramework="net45" />
   <package id="bootbox" version="4.3.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
@@ -33,6 +34,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="ZXing.Net" version="0.16.4" targetFramework="net45" />
 </packages>
